<?xml version="1.0" encoding="utf-8"?>


<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">

    <TableRow android:layout_margin="20dp">

        <TextView
            android:text="@string/way_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Switch
            android:id="@+id/way"
            android:textOn="@string/way_on"
            android:textOff="@string/way_off"
            android:layout_gravity="start" />
    </TableRow>

    <TableRow android:layout_margin="20dp">

        <TextView
            android:text="@string/money_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/money"
            android:inputType="numberDecimal" />
    </TableRow>
</TableLayout>